--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -7,17 +7,17 @@
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context=".ui.TimelineActivity">
+              tools:context="com.yuzhou.twitter.ui.TimelineActivity">
 
     <ListView
-        android:id="@+id/lvTimeline"
+        android:id="@+id/timeline__lv_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:drawSelectorOnTop="false"/>
 
     <TextView
-        android:id="@+id/tvEmptyTimeline"
+        android:id="@+id/timeline__tv_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical|center_horizontal"
