--- a/app/src/main/res/menu/menu_compose.xml
+++ b/app/src/main/res/menu/menu_compose.xml
@@ -1,13 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.yuzhou.twitter.ui.TimelineActivity">
+      tools:context="com.yuzhou.twitter.ui.ComposeActivity">
 
     <item
-        android:id="@+id/action_compose"
-        android:icon="@drawable/ic_action_compose"
+        android:id="@+id/action_tweet"
         android:orderInCategory="100"
-        android:title="@string/action_compose"
+        android:title="@string/compose"
         app:showAsAction="ifRoom"/>
 
 </menu>
