--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -9,12 +9,20 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               tools:context="com.yuzhou.twitter.ui.TimelineActivity">
 
-    <ListView
-        android:id="@+id/timeline__lv_list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/timeline__rl_swipe"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:drawSelectorOnTop="false"/>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/timeline__lv_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:drawSelectorOnTop="false"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/timeline__tv_empty"
