see retweet count and favorite count

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="homeAsUpIndicator">@drawable/ic_action_back</item>
+        <item name="homeAsUpIndicator">@drawable/ic_action_back_home_dark</item>
         <item name="colorPrimaryDark">@color/tw__blue_pressed</item>
         <item name="colorPrimary">@color/tw__blue_default</item>
         <item name="android:textColorPrimary">@color/tw__light_gray</item>
