--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -52,11 +52,10 @@
 
     <GridView
         android:id="@+id/tweet__gv_images"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tweet__tv_user_name"
         android:layout_below="@+id/tweet__tv_text_body"
-        android:gravity="left|top"
         android:horizontalSpacing="2dp"
         android:stretchMode="columnWidth">
     </GridView>
